# a-share-briefing-skill

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  config.example.json  main.py  pyproject.toml  requirements-ai.txt  requirements.txt
.trae/skills/a-share-briefing-skill/: SKILL.md
data/: ai_analyzer.py  wind_client.py
templates/: report_template.py
utils/: helpers.py
